--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
 
 <div>
   <% if current_user %>
-    Welcome <%= current_user.name %>!
+    Welcome <%= link_to current_user.name, user_path(current_user) %>!
     <%= link_to "Sign Out", signout_path %>
   <% else %>
     <%= link_to "Sign in with GitHub", "/auth/github" %>
