--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -6,18 +6,10 @@
 <ul>
   <% current_user.repos.each do |repo| %>
     <li>
+    <%= link_to repo.full_name, repository_path(:login => repo.owner.login, :repo => repo.name) %>
     <%= repo.full_name %>
+    <br/>
     <small><%= repo.description %></small>
-    <br>
-    <%= debug repo %>
-    <ul>
-      <% collaborators = repo.rels[:collaborators].get %>
-      <% collaborators.data.each do |colab| %>
-        <li>
-        <%= colab.login %>
-        </li>
-      <% end %>
-    </ul>
     </li>
   <% end %>
 </ul>
